correction select2 css alignement

--- a/Resources/public/css/adminLTE.css
+++ b/Resources/public/css/adminLTE.css
@@ -3712,6 +3712,9 @@ fieldset[disabled] .btn-vk.active {
     margin-right: 0;
 }
 
+.select2-choice>span:first-child, .select2-chosen, .select2-container .select2-choices .select2-search-field input {
+  padding: 0px 5px;
+}
 .select2-container .select2-choice {
     background: #fff;
     border-radius: 0;
